# my_tiny_engine

./: .gitignore
01-open-gl-triangle/: CMakeLists.txt  engine.cxx  engine.h  engine.hxx  engine_impl.cpp  engine_impl.hpp  event.cpp  event.h  gl_initializer.h  main.cxx  shader.cpp  shader.h
01-open-gl-triangle/shaders/: color_shader.vert  color_srader.frag
02-uniforms/: CMakeLists.txt  engine.h  engine_impl.cpp  engine_impl.hpp  gl_initializer.h  main.cxx  shader.cpp  shader.h
02-uniforms/shaders/: color_srader_in_out.frag  color_vertex.frag
03-texture/: CMakeLists.txt  engine.h  engine_impl.cpp  engine_impl.hpp  gl_initializer.h  main.cxx  shader.h  shader_path_constants.hpp  texture.cpp  texture.h  vao.cpp  vao.h
03-texture/common/: CMakeLists.txt  color.cpp  color.h  types.cpp  types.h  types_constants.h
03-texture/shaders/: color_shader_in_out.vert  color_srader_uniform.frag  color_vertex.frag  color_vertex.vert  color_vertex_vbo.vert  texture.frag  texture.vert  triangle_2d.frag  triangle_2d.vert
